--- a/app/views/course_info/_course_policy.html.erb
+++ b/app/views/course_info/_course_policy.html.erb
@@ -1,52 +1,100 @@
 
 <% if course == Course.first %>
-  <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>学校的政策支持与措施</strong></a>
-  <a href="javascript:void(0)" class="btn"><strong>本课程改进的方向与途径</strong></a>
-  <a href="javascript:void(0)" class="btn"><strong>本课程与国内外同类课程的比较</strong></a>
-  <a href="javascript:void(0)" class="btn"><strong>本课程的特色与创新点</strong></a>
+  <a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>学校的政策支持与措施</strong></a>
+  <a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>本课程改进的方向与途径</strong></a>
+  <a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>本课程与国内外同类课程的比较</strong></a>
+  <a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>本课程的特色与创新点</strong></a>
   <br><br>
-  <dl>
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 学校对精品课程建设的政策支持与措施及其落实情况</p>
-    <div class="container-fluid">
-      <dd>精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
-    </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 1 . 组织保障</p>
-    <div class="container-fluid">
-      <dd>学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，首先必须是院级重点课程建设中优秀的，同时，特别强调应符合高职高专人才培养的要求，通过“工学结合”，企业学校一起交流，共同开发。并且有一支专兼结合的“双师素质”教师队伍，突出培养职业能力和职业素养，体现职业性、实践性和开发性要求。</dd>
-    </div>
+  <div class=" course-content-policy-div">
+    <dl>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 学校对精品课程建设的政策支持与措施及其落实情况</p>
+      <div class="container-fluid">
+        <dd>精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
+      </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2. 经费保障</p>
-    <div class="container-fluid">
-      <dd>（1）学院经过多年来的不断建设，自2005年以来已投入200余万元建成了计算机实验实训室、软件开发仿真实验室、购置了开发环境软件、用于教学的多媒体电子教室等相应的教学软件；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。</dd>
-      <dd>（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
-    </div>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 1 . 组织保障</p>
+      <div class="container-fluid">
+        <dd>学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，首先必须是院级重点课程建设中优秀的，同时，特别强调应符合高职高专人才培养的要求，通过“工学结合”，企业学校一起交流，共同开发。并且有一支专兼结合的“双师素质”教师队伍，突出培养职业能力和职业素养，体现职业性、实践性和开发性要求。</dd>
+      </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 3. 政策保障</p>
-    <div class="container-fluid">
-      <dd>（1）课程建设有据可依</dd>
-      <dd>我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《新侨职业技术学院关于批准20门重点课程建设的决定》、《新侨职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。</dd>
-      <dd>（2）项目负责人制</dd>
-      <dd>学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。</dd>
-    </div>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2. 经费保障</p>
+      <div class="container-fluid">
+        <dd>（1）学院经过多年来的不断建设，自2005年以来已投入200余万元建成了计算机实验实训室、软件开发仿真实验室、购置了开发环境软件、用于教学的多媒体电子教室等相应的教学软件；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。</dd>
+        <dd>（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
+      </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 4. 师资保障</p>
-    <div class="container-fluid">
-      <dd>（1）优先引进</dd>
-      <dd>在师资队伍建设方面，优先和保证引进上海市精品课程和校级重点课程建设需要的“双师素质”教师，尤其是来自企业和行业一线的“双师素质”教师。</dd>
-      <dd>（2）政策倾斜</dd>
-      <dd>学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜。</dd>
-    </div>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 3. 政策保障</p>
+      <div class="container-fluid">
+        <dd>（1）课程建设有据可依</dd>
+        <dd>我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《新侨职业技术学院关于批准20门重点课程建设的决定》、《新侨职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。</dd>
+        <dd>（2）项目负责人制</dd>
+        <dd>学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。</dd>
+      </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 5. 实践教学条件保障</p>
-    <div class="container-fluid">
-      <dd>（1）现有条件满足</dd>
-      <dd>在实践教学环境建设方面，学院已拥有良好的设施，能保障课程实践教学和改革的顺利实施。</dd>
-      <dd>（2）加大力度，更上一层楼</dd>
-      <dd>学院将继续加大校内、外实训基地的建设，为课程的实践教学提供更加优良的条件。对今年申报上海市精品课程，学院将按有关政策给予进一步的扶持和鼓励，按一定比例配套经费，保证精品课程建设的顺利进行。</dd>
-      <dd>学院对已列为市级的精品课程，每个学期进行一次专门检查，着重检查是否按“建设规划”如期落实。并且，在校内组织推广、交流精品课程，总结精品课程经验，对他课程起到辐射、带动作用。同时，经常听取授课学生对精品课程的评价，督促其不断完善。</dd>
-    </div>
-  </dl>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 4. 师资保障</p>
+      <div class="container-fluid">
+        <dd>（1）优先引进</dd>
+        <dd>在师资队伍建设方面，优先和保证引进上海市精品课程和校级重点课程建设需要的“双师素质”教师，尤其是来自企业和行业一线的“双师素质”教师。</dd>
+        <dd>（2）政策倾斜</dd>
+        <dd>学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜。</dd>
+      </div>
+
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 5. 实践教学条件保障</p>
+      <div class="container-fluid">
+        <dd>（1）现有条件满足</dd>
+        <dd>在实践教学环境建设方面，学院已拥有良好的设施，能保障课程实践教学和改革的顺利实施。</dd>
+        <dd>（2）加大力度，更上一层楼</dd>
+        <dd>学院将继续加大校内、外实训基地的建设，为课程的实践教学提供更加优良的条件。对今年申报上海市精品课程，学院将按有关政策给予进一步的扶持和鼓励，按一定比例配套经费，保证精品课程建设的顺利进行。</dd>
+        <dd>学院对已列为市级的精品课程，每个学期进行一次专门检查，着重检查是否按“建设规划”如期落实。并且，在校内组织推广、交流精品课程，总结精品课程经验，对他课程起到辐射、带动作用。同时，经常听取授课学生对精品课程的评价，督促其不断完善。</dd>
+      </div>
+    </dl>
+  </div>
+
+  <div class=" course-content-policy-div" style="display: none;">
+    <dl>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 1.“校企合作、共育共管”的校企合作运行机制尚需完善。</p>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2. 教师工学结合的课程开发和实施能力还有待进一步提高。</p>
+    </dl>
+  </div>
+
+  <div class=" course-content-policy-div" style="display: none;">
+    <dl>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 1．先进的课程设计理念</p>
+      <div class="container-fluid">
+        <dd>课程设计以岗位需求为导向，基于工作过程的开发模式，教学做一体化，任务驱动，自主创新学习的先进设计理念，摈弃了学科式的课程范式，对学生职业能力培养有重要支撑作用。</dd>
+      </div>
+
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2．先进的教学模式和方法</p>
+      <div class="container-fluid">
+        <dd>借鉴德国职业教育采用的项目教学法，分组学习，学生自主确定具体工作计划，不“掐尖”，不“甩”能力弱的学生，培养独立思考，自主学习的能力。取得了很好的教学效果，其教学模式和教学方法在同类课程的改革和建设中处于前沿。</dd>
+      </div>
+
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 3．自主研发工学结合的教学模式在同类课程中处于领先地位。</p>
+    </dl>
+  </div>
+  
+  <div class=" course-content-policy-div" style="display: none;">
+    <dl>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 本课程的特色</p>
+      <div class="container-fluid">
+        <dt>1．基于项目任务驱动的课程设计</dt>
+        <dd>课程设计以岗位需求为导向，基于工作过程的开发模式，教学做一体化，任务驱动，自主创新学习的先进设计理念，摈弃了学科式的课程范式，对学生职业能力培养有重要支撑作用。以就业为导向，将企业项目任务碎片化，课程模块化，划分不同的学习情景，教学过程以学生为主体，教师为主导，培养学生的职业综合能力。</dd>
+        <dt>2．三位一体的教学模式</dt>
+        <dd>将实际的商业项目转化成适合教学的项目，实施“课堂、实训室、公司”三位一体教学模式改革，深化校企合作，能够真正的让学生在工作中学习，在学习中工作，促进学生就业“零适应期”。</dd>
+        <dt>3．多元化的课程考核</dt>
+        <dd>高职教育的考核应坚持以职业岗位能力为重点，知识、技能并重，以能力和技能考核为主线的原则，摒弃那种只考查学生生搬硬套的考核方式。考试在教学活动中具有显示功能、反馈功能和导向功能，因此要建立以能力培养为主线的课程体系，必须建立考核形式与教学内容、能力培养相适应的高职教育课程考核模式。《iOS图形界面开发》课程的考核重点是学生的平时表现，实训过程等环节，激励学生将功夫用在平时，而不是期末突击，这也有利于学风建设。</dd>
+      </div>
+
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2．三位一体的教学模式本课程的创新点</p>
+      <div class="container-fluid">
+        <dt>采用真实项目，真实工作过程，工学结合方式进行教学。</dt>
+        <dd>《iOS图形界面开发》课程的开展实行企业合作制度。课程内容以企业真实项目为主线，把复杂无序的企业项目序化为适合高职学生学习的教学项目。教师在《iOS图形界面开发》课程各个子项目的教学过程中着重学生的实践环节，为每个子项目配以必要、够用的基础知识来补充学生的理论基础，每次授课都设计合理的课内、课外作业建立学生独立思考、自我学习的良好习惯。教师为每个子项目设计相应的实训报告，用以考查学生阶段性技能的掌握情况。学习完该课程，学生以小组的形式完成综合性项目实训，通过答辩等方式重点考查学生综合项目的组织、协作、分工、完成、创新等能力。</dd>
+        <dd>《iOS图形界面开发》课程将学生总成绩分布于若干个考核项目中，强调过程考核。平时考核与项目实训考核在总成绩中比例的增加，也明确了学习态度的重要性及项目实训技能的重要性。这一方法明显提高了学生对课程学习的重视程度，促使学生关注课程学习的每一个细节，对提高学生自主学习能力有很大的帮助，而且显著提高了课堂时间利用率，使学生能够达到高效率的学习。 所以该课程的教学方法、方式、考核方法对所有的职业教育课程均有良好的借鉴作用。</dd>
+      </div>
+      
+    </dl>
+  </div>
 
 <% elsif %>
   <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>特色与创新</strong></a>
