--- a/app/views/course_info/_course_setup.html.erb
+++ b/app/views/course_info/_course_setup.html.erb
@@ -1,8 +1,8 @@
 <% if course == Course.first %>
-	<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>课程设置</strong></a>
-	<a href="javascript:void(0)" class="btn"><strong>课程性质与作用</strong></a>
+	<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程设置</strong></a>
+	<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程性质与作用</strong></a>
 	<br><br>
-	<div class="container-fluid">
+	<div class="container-fluid course-content-step-div">
 		<dl>
 			<dt>1.课程设计的理念</dt>
 			<dd>1.1教学过程与企业用人要求对接，课程内容与职业标准对接</dd>
@@ -30,6 +30,11 @@
 			<dd>学会评价产品，有将产品进一步优化的意识。德国制造之所以享誉全球，在于在学生阶段就开始培养优化产品的意识，工作不敷衍了事，追求更好。这是我们需要更加重视的职业能力</dd>
 			<dd>每个学习任务经历特定的过程，然后进入下一个学习任务，知识螺旋式上升。学生根据自己的能力制定具体工作计划，让优秀学生“冒尖”，同时不会打击能力差的学生的积极性，不会出现部分学生因为跟不上而放弃学习的情景。</dd>
 		</dl>
+	</div>
+
+	<div class="container-fluid course-content-step-div" style="display: none">
+		<p>《iOS图形界面开发》是计算机软件应用专业的重点骨干课程，通过本课程的学习，学生能够学习到iOS项目开发必备的知识和技能：图形界面设计思想，Objective-C编程技术，Socket、iCloud等网络连接技术，XML、JSON数据处理技术，Cocos2d游戏编程技术，Xcode、Interface Builder、iOS模拟器、调试器、Instruments等开发工具的使用。</p><br>
+		<p>本课程以市场为导向，以服务为宗旨，为社会培养高级应用型人才的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验，通过这种校企合作“人才共育、过程共管、成果共享、责任共担”的指导思想，加强软件专业学员在就业前的技能培训，培养出多层次、复合型、实用型、创新型的具有竞争力的高素质高技能人才，填平毕业生与企业需求之间的鸿沟。</p>
 	</div>
 
 <% elsif %>
