course static page

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -152,16 +152,16 @@
         <%= render partial: "/course_info/teach_content"%>
       </div>
       <div class="entry-content">
-        教学方法
+        <%= render partial: "/course_info/teach_method"%>
       </div>
       <div class="entry-content">
-        教学条件
+        <%= render partial: "/course_info/teach_condition"%>
       </div>
       <div class="entry-content">
-        教学效果
+        <%= render partial: "/course_info/teach_effect"%>
       </div>
       <div class="entry-content">
-        申报材料
+        <%= render partial:"/course_info/teach_data" %>
       </div>
     </div>
   </div>
