--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -2,32 +2,22 @@
   <ul id="xcui-menu">
     <li>
       <%= link_to admin_courses_path do %>
-        <span class="glyphicon glyphicon-home">课程列表</span>
+        <span class="glyphicon glyphicon-book"></span> 课程列表
       <%end%>
     </li>
     <li>
       <%= link_to admin_teachers_path do %>
-        <span class="glyphicon glyphicon-home">教师列表</span>
+        <span class="glyphicon glyphicon-user"></span> 教师列表
       <%end%>
     </li>
     <li>
       <%= link_to admin_users_path do %>
-        <span class="glyphicon glyphicon-home">学生列表</span>
+        <span class="glyphicon glyphicon-tasks"></span> 学生列表
       <%end%>
     </li>
     <li>
       <%= link_to admin_specialties_path do %>
-        <span class="glyphicon glyphicon-home">专业列表</span>
-      <%end%>
-    </li>
-    <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-home">首页</span>
-      <%end%>
-    </li>
-    <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-home">首页</span>
+        <span class="glyphicon glyphicon-th-list"></span> 专业列表
       <%end%>
     </li>
   </ul>
