--- a/app/views/admin/specialties/_specialty.html.erb
+++ b/app/views/admin/specialties/_specialty.html.erb
@@ -8,10 +8,10 @@
       <span class="glyphicon glyphicon-eye-open"></span>
     <%end%>
     <%= link_to edit_admin_specialty_path(specialty), class: 'btn btn-xs btn-default', title: '编辑' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
+      <span class="glyphicon glyphicon-edit"></span>
     <%end%>
     <%= link_to admin_specialty_path(specialty), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
+      <span class="glyphicon glyphicon-trash"></span>
     <%end%>
   </td>
 </tr>
