--- a/app/views/admin/sub_courses/_sub_course.html.erb
+++ b/app/views/admin/sub_courses/_sub_course.html.erb
@@ -10,10 +10,10 @@
       <span class="glyphicon glyphicon-eye-open"></span>
     <%end%>
     <%= link_to edit_admin_course_sub_course_path(@course, sub_course), class: 'btn btn-xs btn-default', title: '编辑' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
+      <span class="glyphicon glyphicon-edit"></span>
     <%end%>
     <%= link_to nil, class: 'btn btn-xs btn-danger', title: '删除' do %>
-      <span class="glyphicon glyphicon-eye-open"></span>
+      <span class="glyphicon glyphicon-trash"></span>
     <%end%>
   </td>
 </tr>
