--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -16,6 +16,11 @@
       <%end%>
     </li>
     <li>
+      <%= link_to admin_academies_path do %>
+        <span class="glyphicon glyphicon-flag"></span> 学院列表
+      <%end%>
+    </li>
+    <li>
       <%= link_to admin_specialties_path do %>
         <span class="glyphicon glyphicon-th-list"></span> 专业列表
       <%end%>
