--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -23,13 +23,12 @@
   <thead>
     <tr>
       <th class="text-center">头像</th>
-      <th class="text-center">手机号</th>
-      <th class="text-center">姓名</th>
-      <!--<th class="text-center">昵称</th>-->
-      <th class="text-center">性别</th>
+      <th class="text-center">学院/专业</th>
       <th class="text-center">班级</th>
-      <th>密码</th>
-      <!-- <th class="text-center">职位</th> -->
+      <th class="text-center">学号</th>
+      <th class="text-center">姓名</th>
+      <th class="text-center">手机</th>
+      <th class="text-center">性别</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
   </thead>
