--- a/app/views/admin/academies/index.html.erb
+++ b/app/views/admin/academies/index.html.erb
@@ -2,12 +2,12 @@
   <li>
     <a href="#{admin_root_path}">后台</a>
   </li>
-  <li class="active">专业列表</li>
+  <li class="active">学院列表</li>
 <%end%>
 
 <%= content_for :toolbar do %>
   <div class="col-xs-12">
-    <%= link_to new_admin_specialty_path, class: 'btn btn-success' do %>
+    <%= link_to new_admin_academy_path, class: 'btn btn-success' do %>
       <span class="glyphicon glyphicon-plus-sign">新建</span>
     <%end%>
     <div class="col-xs-3 pull-right">
@@ -22,15 +22,13 @@
 <table class="table table-hover table-bordered text-center table-condensed">
   <thead>
     <tr>
-      <th class="text-center">编号</th>
-      <th class="text-center">专业名称</th>
-      <th class="text-center">所属院系</th>
-      <th class="text-center">专业代码</th>
+      <th class="text-center">学校名称</th>
+      <th class="text-center">学院名称</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
   </thead>
   <tbody>
-  <%= render @specialties %>
+  <%= render @academies %>
   </tbody>
 </table>
-<%= paginate @specialties %>
+<%= paginate @academies %>
