--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,12 +1,11 @@
 <tr>
   <td><%= image_tag(user.show_image, style: "max-height:60px;max-width:60px;") %></td>
-  <td><%= user.phone %></td>
-  <td><%= user.name %></td>
-  <!-- <td><%= user.nickname%></td> -->
-  <td><%= User::PartnerGender[user.gender.to_sym] %></td>
+  <td><%= user.try(:grade).try(:specialty).try(:name) %></td>
   <td><%= user.try(:grade).try(:name) %></td>
-  <td><%= user.encrypted_password%></td>
-  <!-- <td><%= user.position %></td> -->
+  <td><%= user.number %></td>
+  <td><%= user.name %></td>
+  <td><%= user.phone %></td>
+  <td><%= User::PartnerGender[user.gender.to_sym] %></td>
   <td>
     <%= link_to [:admin, user], class: 'btn btn-xs btn-info', title: '查看' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
