--- a/app/views/admin/teachers/index.html.erb
+++ b/app/views/admin/teachers/index.html.erb
@@ -36,3 +36,18 @@
   </tbody>
 </table>
 <%= paginate @teachers %>
+
+<%= form_tag import_admin_teachers_path, multipart: true do %>
+  <div class="form-group">
+    <div class="col-sm-12">
+      <div class="col-sm-4">
+        <%= file_field_tag :file, class: 'form-control' %>
+      </div>
+      <div class="col-sm-2">
+        <button class="btn btn-success" type="submit">
+          <span class="glyphicon glyphicon-floppy-save">导入教师信息</span>
+        </button>
+      </div>
+    </div>
+  </div>
+<% end %>
