excel number bug

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -24,6 +24,7 @@
     <tr>
       <th class="text-center">头像</th>
       <th class="text-center">学院/专业</th>
+      <th class="text-center">专业编号</th>
       <th class="text-center">班级</th>
       <th class="text-center">学号</th>
       <th class="text-center">姓名</th>
