--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= image_tag(user.show_image, style: "max-height:60px;max-width:60px;") %></td>
   <td><%= user.try(:grade).try(:specialty).try(:name) %></td>
+  <td><%= user.try(:grade).try(:specialty).try(:code) %></td>
   <td><%= user.try(:grade).try(:name) %></td>
   <td><%= user.number %></td>
   <td><%= user.name %></td>
