--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :script do %>
-  <%= javascript_include_tag "jquery.countdown.min", "_exam_new" %>
+  <%= javascript_include_tag "jquery.countdown.min", "_exam_new", 'data-turbolinks-track' => true %>
 <%end%>
 
 <% content_for :crumbs do%>
