--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -71,7 +71,7 @@
   	  <% @teacher.teacher_courses.each do |teacher_course|%>
 	  		<li>
 	  			<%= link_to show_courses_path(teacher_course.course.number), class: 'image' do%>
-	  			  <%= image_tag(teacher_course.course.image.avatar.url(:c_340_200))%>
+	  			  <%= image_tag(teacher_course.course.attachment.content.url(:c_340_200))%>
 	  			<% end %>
 	  			<p class="course-title"><%= link_to teacher_course.course.name, show_courses_path(teacher_course.course.number)%></p>
 	    			<div class="description">
