--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -15,9 +15,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :image, '课程展示图', class: 'col-sm-2 control-label' %>
+    <%= f.label :attachment, '课程附件', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
-      <%= f.file_field :image, class: 'form-control' %>
+      <%= f.file_field :attachment, class: 'form-control' %>
     </div>
   </div>
   <div class="form-group">
