--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,7 +23,11 @@
 
     <div class="left-content">
       <div class="course-image">
-        <%= image_tag(@course.image.avatar.url(:c_500_350))%>
+        <video width="500" height="350" class="mejs-player" poster="<%= (@course.attachment.content.url(:c_500_350))%>" controls="controls" preload="none">
+          <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
+          <source type="video/webm" src="myvideo.webm" />
+          <source type="video/ogg" src="myvideo.ogv" />
+        </video>
       </div>
       <div class="course-and-score">
         <%= link_to "课后作业", after_class_courses_path, class: "course"%>
