--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
       <div class='single-vedio-content'>
         <div class="vedio-content">
           <div class="image-wrapper">
-            <%= link_to image_tag(course.image.avatar.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.image%>
+            <%= link_to image_tag(course.attachment.content.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.attachment%>
           </div>
           <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
           <p class="description">
