add campus to user

--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -78,6 +78,13 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :campus, '校区 ', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.text_field :campus , class: 'form-control' %>
+    </div>
+  </div>
+
   <hr></hr>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
