--- a/app/views/admin/teachers/index.html.erb
+++ b/app/views/admin/teachers/index.html.erb
@@ -22,12 +22,14 @@
 <table class="table table-hover table-bordered text-center">
   <thead>
     <tr>
-      <th class="text-center">头像</th>
-      <th class="text-center">手机号</th>
+      <th class="text-center">工号</th>
       <th class="text-center">姓名</th>
-      <th class="text-center">学院</th>
-      <th class="text-center">学历</th>
-      <th class="text-center">专业技术职位</th>
+      <th class="text-center">出生年月</th>
+      <th class="text-center">职称</th>
+      <th class="text-center">手机号</th>
+      <th class="text-center">邮箱</th>
+      <th class="text-center">最终学历</th>
+      <th class="text-center">最终学位</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
   </thead>
