--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -7,6 +7,7 @@
   <td><%= user.name %></td>
   <td><%= user.phone %></td>
   <td><%= User::PartnerGender[user.gender.to_sym] %></td>
+  <td><%= user.campus %></td>
   <td>
     <%= link_to [:admin, user], class: 'btn btn-xs btn-info', title: '查看' do %>
       <span class="glyphicon glyphicon-eye-open"></span>
