--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -30,6 +30,7 @@
       <th class="text-center">姓名</th>
       <th class="text-center">手机</th>
       <th class="text-center">性别</th>
+      <th class="text-center">校区</th>
       <th class="text-center" colspan="3">操作</th>
     </tr>
   </thead>
