--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -18,15 +18,17 @@
   		<div class="infos col-sm-offset-3">
 		  	<%= simple_form_for(current_teacher, url: teacher_path(current_teacher.id), html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: {file: :horizontal_file_input, radio_buttons: :horizontal_radio_and_checkboxes }) do |f|%>
 		  		<%= f.input :name, label: "我的姓名" %>
+          <%= f.input :number, label: "工号" %>
           <div class="col-sm-offset-2">
             <%= image_tag(current_teacher.show_image, class: "img-thumbnail edit-teacher-image") %>
           </div>
 		  		<%= f.input :avatar, as: :file, label: "我的头像" %>
           <%= f.association :academy, collection: [['请选择院系','']] + Academy.all.pluck(:name,:id), 
           as: :select, include_blank: false, label: "所属学院" %>
-          <%= f.input :final_degree, label: "专业技术职位" %>
+          <%= f.input :tec_position, label: "专业技术职位" %>
           <%= f.input :qualification, label: "资格证书" %>
-          <%= f.input :final_education, collection: Teacher.final_educations, prompt: "请选择学位", label: "我的学历" %>
+          <%= f.input :final_education,label: "最终学历" %>
+          <%= f.input :final_degree,label: "最终学位" %>
           <%= f.input :tec_expertise, label: "教学与技术专长" %>
           <%= f.input :phone, label: "手机号码",required: false %>
           <%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别", item_wrapper_class: "radio-inline" %>
