--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -4,7 +4,7 @@
 
 body.user__index, body.user__show, body.user__update, body.user__my_courses, body.user__my_exams, 
 body.user__score_search, body.user__my_collect, body.user__my_questions, body.user__my_answers, body.user__discuss_center,
-body.user__comment_create, body.user__update_password
+body.user__comment_create, body.user__update_password, .devise__registrations__update, .devise__registrations__edit
 {
 
   .grey-font {
