--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -82,7 +82,7 @@
       $("#left-bar .list li").eq(5).find("a").addClass("active");
       $("#left-bar .list li").eq(5).siblings().find("a").removeClass("active");
     }
-    else if("<%= controller.controller_path %>" == "teachers" && "<%= controller.action_name%>" == "my_account"){
+    else if( ("<%= controller.action_name%>" == "my_account" || "<%= controller.action_name%>" == "edit" || "<%= controller.action_name%>" == "update")){
       $("#left-bar .list .list-bg").css("top", "458px");
       $("#left-bar .list li").eq(6).find("a").addClass("active");
       $("#left-bar .list li").eq(6).siblings().find("a").removeClass("active");
